#299 [fix] 불변성을 보장하기 위해 toList()로 수정